Skip docker image build process on Windows.